--- a/MemoriaVirtual/.vscode/settings.json
+++ b/MemoriaVirtual/.vscode/settings.json
@@ -52,5 +52,6 @@
         "ProjectSettings/":true,
         "temp/":true,
         "Temp/":true
-    }
+    },
+    "python.pythonPath": "C:\\Users\\hppoc\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
